# MoneyFlow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.streamlit/: config.toml
docs/: architecture.md  csv-format.md
sample_data/: README.md  sample_statement.csv  sample_statement_debit_credit.csv
scripts/: generate_sample_data.py  mock_llm_server.py  scan_secrets.sh
src/moneyflow/: __init__.py
src/moneyflow/ai/: __init__.py  base.py  factory.py  local_mistral.py  openai_compatible.py  prompt_builder.py  prompts.py
src/moneyflow/analytics/: analyzer.py  subscriptions.py  unusual_rules.py
src/moneyflow/auth/: handler.py  passwords.py  validators.py
src/moneyflow/config/: settings.py
src/moneyflow/database/: handler.py  models.py
src/moneyflow/parsing/: csv_parser.py
src/moneyflow/services/: file_processor.py  llm_service.py  subscription_service.py
src/moneyflow/state/: session_state.py
src/moneyflow/ui/: app.py  theme.py
src/moneyflow/ui/components/: charts.py  landing_page.py  logo_animation.py  sidebar.py  subscription_widgets.py
src/moneyflow/ui/pages/: ai_insights_page.py  auth_page.py  budget_planner_page.py  overview_page.py  recommendations_page.py  recurring_page.py  subscriptions_page.py  transactions_page.py  unusual_page.py
tests/: conftest.py  test_ai_provider.py  test_analyzer.py  test_auth.py  test_config.py  test_csv_parser_contracts.py  test_db_handler.py  test_file_processor_resilience.py  test_passwords.py  test_prompts.py  test_statement_workflow.py  test_subscription_manager.py  test_unusual_rules.py  test_validation.py
