[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moneyflow"
version = "0.1.0"
description = "Local-first personal finance analysis: CSV parsing, categorisation, dashboards, and optional AI insights."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Leo Teme Teme" }]
keywords = ["finance", "streamlit", "personal-finance", "pandas", "budgeting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Framework :: Streamlit",
]

# Core runtime dependencies (SQLite works out of the box; no AI/network required).
dependencies = [
    "streamlit>=1.59.2,<2.0",
    "pandas>=2.3.3,<3.0",
    "numpy>=2.2.6,<3.0",
    "plotly>=6.9.0,<7.0",
    "SQLAlchemy>=2.0.51,<3.0",
    "python-dotenv>=1.2.2,<2.0",
    "requests>=2.34.2,<3.0",
]

[project.optional-dependencies]
# PostgreSQL driver (only needed when DATABASE_URL points at Postgres).
postgres = ["psycopg2-binary>=2.9.12,<3.0"]

# Local instruction-tuned model support (large download; optional).
local-ai = [
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "accelerate>=1.14.0",
    "tokenizers>=0.23.1",
    "sentencepiece>=0.2.2",
    "protobuf>=7.35.1",
    "bitsandbytes>=0.49.2; sys_platform != 'darwin'",
]

# Development, linting, and testing.
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[project.urls]
Homepage = "https://github.com/leotemtem/MoneyFlow"
Repository = "https://github.com/leotemtem/MoneyFlow"
Issues = "https://github.com/leotemtem/MoneyFlow/issues"
Changelog = "https://github.com/leotemtem/MoneyFlow/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: exercises the database layer / full statement workflow",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["moneyflow"]
branch = true
omit = [
    # Streamlit UI needs a browser/e2e harness; excluded from unit-coverage.
    "src/moneyflow/ui/*",
    "src/moneyflow/services/*",
    "src/moneyflow/state/*",
    # Heavy local model provider requires torch + a downloaded model.
    "src/moneyflow/ai/local_mistral.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# UI modules use long inline HTML/CSS strings; do not enforce line length there.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "B007", "B017"]
"src/moneyflow/analytics/analyzer.py" = ["B007"]
"src/moneyflow/analytics/subscriptions.py" = ["B007"]
